Fix alignment

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -60,8 +60,8 @@ p {
       font-size: 2.5em !important;
     }
   }
-  h2,h5 {
-    text-align: center
+  h1, h2, h5, p {
+    text-align: center;
   }
   p {
     @media screen and (max-width: 765px) {
@@ -121,8 +121,10 @@ p {
     border: 1px solid rgb(189, 189, 189);
     border-radius: 10px;
   }
-  .navbar-collapse ul li a i {
-    margin-right: 0.3em;
+  .navbar-collapse {
+    ul li a i {
+      margin-right: 0.3em;
+    }
   }
 }
 
